--- a/002.html
+++ b/002.html
@@ -2,7 +2,6 @@
      cmd + s // 저장
 oo2.html + enter -->
 
-
 <!DOCTYPE html>
 <html lang="ko">
   <head>
@@ -12,7 +11,8 @@ oo2.html + enter -->
     <title>emmet</title>
   </head>
   <body>
- <!-- h1      
+    <!-- 
+      h1      
       h1{helloworld}
       h1+p
       h1{hello}*10
@@ -26,6 +26,8 @@ oo2.html + enter -->
       img:z
       a
       a[href='www.naver.com']
-      h1.one.two#three -->
+      h1.one.two#three 
+      h$*6
+    -->
   </body>
 </html>
