--- a/003.html
+++ b/003.html
@@ -1,3 +1,25 @@
-www.naver.com 이름 URl
-223.130.200.107 주소 IP
-www.asdkals.me:3000 문 PORT
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header></header>
+    
+    <nav></nav>
+
+    <section>
+      <article></article>
+
+      <article></article>
+    </section>
+
+    <aside></aside>
+
+    <footer></footer>
+  </body>
+</html>
+
