--- a/015.html
+++ b/015.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hello world</title>
+    <title>css 기본</title>
+    <style>
+      h1 {
+        color: tomato;
+      }
+    </style>
   </head>
   <body>
-    <h1>hello world</h1>  
+    <!-- 
+        1. 내부 css 
+        2. 외부 css
+        3. 인라인 css
+    -->
+    <h1>hello world</h1>
   </body>
 </html>
