--- a/face.html
+++ b/face.html
@@ -13,6 +13,7 @@
         align-items: center;
         justify-content: center;
         padding-top: 200px;
+        background: lightgreen;
       }
 
       .container {
