--- a/naver.html
+++ b/naver.html
@@ -78,19 +78,26 @@
         .left a {
             text-decoration: none;
             color: #404040;
+            float: right;
+            margin-top: 3px;
+            
         }
 
         .left img {
-            margin-right: 3px;
+            margin-right: 5px;
+            float: left;
         }
 
         .right a {
             text-decoration: none;
             color: #404040;
+            float: left;
+            margin-top: 2px;
         }
 
         .right img {
-            margin-right: 3px;
+            margin-right: 5px;
+            float: left;
         }
     </style>
   </head>
@@ -105,11 +112,10 @@
         <div class="footer">
           <div class="left">
             <img src="./images/lock.png" alt="" width="10px" height="14px" />
-            <a href="">아이디</a>
-            <a href="">비밀번호 찾기</a>
+            <a href="">아이디 비밀번호 찾기</a>
           </div>
           <div class="right">
-            <img src="./images/user.png" alt="" width="10px" height="14px"/>
+            <img src="./images/user.png" alt="" width="13px" height="14px"/>
             <a href="">회원가입</a>
           </div>
         </ㄹ>
