changed float to flex

--- a/naver.html
+++ b/naver.html
@@ -64,40 +64,44 @@
             font-size: 12px;
             margin: 13px 0 0 8px;
             box-sizing: border-box;;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
-        .left{
+        /* .left{
             float: left;
  
         }
 
         .right{
             float: right;
-        }
+        } */
 
         .left a {
             text-decoration: none;
             color: #404040;
-            float: right;
-            margin-top: 3px;
+            /* float: right; */
+            vertical-align: 2px;
             
         }
 
         .left img {
             margin-right: 5px;
-            float: left;
+            /* float: left; */
         }
 
         .right a {
             text-decoration: none;
             color: #404040;
-            float: left;
+            /* float: left; */
             margin-top: 2px;
+            vertical-align: 2px;
         }
 
         .right img {
             margin-right: 5px;
-            float: left;
+            /* float: left; */
         }
     </style>
   </head>
@@ -118,7 +122,6 @@
             <img src="./images/user.png" alt="" width="13px" height="14px"/>
             <a href="">회원가입</a>
           </div>
-        </ㄹ>
       </div>
     </div>
   </body>
