--- a/084_과제.html
+++ b/084_과제.html
@@ -44,7 +44,7 @@
                   <dt>개요</dt>
                   <dd>판타지</dd>
                 </div>
-                <div>
+                <div class="item-star">
                   <dt>평점</dt>
                   <dd>9.05</dd>
                 </div>
@@ -54,12 +54,14 @@
                 </div>
                 <div>
                   <dt>출연</dt>
-                  <dd>라이캣, 소울곰, 개리씨, 자바독, 파이, 썬, 빙키, 뮤라</dd>
+                  <dd class="multi-ellipsis">
+                    라이캣, 소울곰, 개리씨, 자바독, 파이, 썬, 빙키, 뮤라
+                  </dd>
                 </div>
               </dl>
-              <a href="#none">예매하기</a>
-              <a href="#none">예고편</a>
             </article>
+            <a href="#none" class="link-reserv">예매하기</a
+            ><a href="#none" class="link-teaser">예고편</a>
           </li>
           <li>...생략...</li>
           <li>...생략...</li>
@@ -71,11 +73,11 @@
         </ul>
       </section>
     </section>
-    <footer>
-      <section>
+    <footer class="cont-company">
+      <section class="cont-coInfo">
         <h2 class="sr-only">기업정보</h2>
-        <strong>Jungle Cinema</strong>
-        <dl>
+        <strong class="tit-company">Jungle Cinema</strong>
+        <dl class="list-coInfo">
           <dt class="sr-only">회사명</dt>
           <dd>(주) 정글 시네마</dd>
           <dt>대표</dt>
@@ -88,12 +90,14 @@
           <dd>제주특별자치도</dd>
         </dl>
         <em class="sr-only">링크목록</em>
-        <ul>
-          <li><a href="#none">twitter</a></li>
-          <li><a href="#none">facebook</a></li>
-          <li><a href="#none">instgram</a></li>
+        <ul class="list-sns">
+          <li><a href="#none" class="link-twitter">twitter</a></li>
+          <li><a href="#none" class="link-insta">instgram</a></li>
+          <li><a href="#none" class="link-facebook">facebook</a></li>
         </ul>
-        <small>Copyright &copy; 2021 The Jungle.All rights reserved.</small>
+        <small class="txt-copy"
+          >Copyright &copy; 2021 The Jungle.All rights reserved.</small
+        >
       </section>
     </footer>
   </body>
