--- a/실습3.html
+++ b/실습3.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/reset.css" />
+    <link
+      href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <title>Document</title>
   </head>
   <style>
-    @import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+    * {
+      font-family: "Spoqa Han Sans Neo", "sans-serif";
+    }
 
     body {
       width: 100vw;
@@ -84,11 +91,90 @@
       box-sizing: border-box;
       display: flex;
       flex-direction: column;
+      /* align-items: center; */
+      margin-left: 24px;
     }
-
     form input {
       width: 472px;
       height: 50px;
+      margin-bottom: 10px;
+      padding: 15px 0 15px 16px;
+      color: #767676;
+      border: 1px solid #c4c4c4;
+      box-sizing: border-box;
+      background: #ffffff;
+      border-radius: 5px;
+      font-size: 16px;
+      line-height: 20px;
+      font-family: Spoqa Han Sans Neo;
+    }
+
+    .checkbox-btn {
+      width: 160px;
+      height: 22px;
+      display: flex;
+      align-items: center;
+      box-sizing: border-box;
+      margin-bottom: 21px;
+      margin-top: 7px;
+    }
+
+    .round {
+      position: relative;
+      width: 22px;
+      height: 22px;
+      margin-right: 10px;
+    }
+
+    .round label {
+      background-color: #fff;
+      border: 1px solid #767676;
+      border-radius: 50%;
+      width: 22px;
+      height: 22px;
+      cursor: pointer;
+      left: 0;
+      top: 0;
+      position: absolute;
+      /* box-sizing: border-box; */
+    }
+
+    .checkbox-btn input {
+      width: 22px;
+      height: 22px;
+      display: none;
+    }
+
+    .checkbox-btn span {
+      color: #767676;
+      font-weight: 500;
+      line-height: 20px;
+      font-size: 16px;
+      font-family: Spoqa Han Sans Neo;
+    }
+
+    label div {
+      width: 5.5px;
+      height: 8.5px;
+      border-top: 1px solid #767676;
+      border-left: 1px solid #767676;
+      transform: rotate(-135deg);
+      position: absolute;
+      left: 7.3px;
+      top: 4.1px;
+    }
+
+    .round input[type="checkbox"] {
+      visibility: hidden;
+    }
+
+    .round input[type="checkbox"]:checked + label {
+      background-color: #2f80ed;
+      border: 1px solid #2f80ed;
+    }
+
+    .round input[type="checkbox"]:checked + label div {
+      border-color: #fff;
     }
   </style>
   <body>
@@ -106,8 +192,13 @@
       <form action="">
         <input type="text" placeholder="아이디" />
         <input type="text" placeholder="비밀번호" />
-        <div>
-          <input type="checkbox" />
+        <div class="checkbox-btn">
+          <div class="round">
+            <input type="checkbox" checked id="checkbox" />
+            <label for="checkbox">
+              <div></div>
+            </label>
+          </div>
           <span>로그인 상태 유지</span>
         </div>
         <button>로그인</button>
