--- a/실습3.html
+++ b/실습3.html
@@ -87,12 +87,13 @@
 
     form {
       width: 472px;
-      height: 168px;
+      height: 225px;
       box-sizing: border-box;
       display: flex;
       flex-direction: column;
       /* align-items: center; */
       margin-left: 24px;
+      margin-bottom: 20px;
     }
     form input {
       width: 472px;
@@ -176,6 +177,145 @@
     .round input[type="checkbox"]:checked + label div {
       border-color: #fff;
     }
+
+    form button {
+      width: 472px;
+      height: 50px;
+      background: #2f80ed;
+      border-radius: 5px;
+      box-sizing: border-box;
+      padding: 14px 0 14px 0;
+      font-family: Spoqa Han Sans Neo;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 22px;
+      color: #ffffff;
+      border: none;
+    }
+
+    .find-count {
+      width: 472px;
+      box-sizing: border-box;
+      height: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 24px;
+      margin-bottom: 30px;
+    }
+
+    .find-count a {
+      color: #767676;
+      font-size: 14px;
+      line-height: 18px;
+    }
+
+    .find-count div {
+      border-left: 1px solid #767676;
+      width: 4px;
+      height: 15px;
+      margin-left: 12px;
+      margin-right: 8px;
+    }
+
+    .line {
+      width: 472px;
+      height: 18px;
+      margin-left: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #767676;
+      font-size: 14px;
+      box-sizing: border-box;
+      line-height: 18px;
+      margin-bottom: 20px;
+    }
+
+    .line::after {
+      content: "";
+      width: 210px;
+      height: 1px;
+      background: #c4c4c4;
+    }
+
+    .line::before {
+      content: "";
+      width: 210px;
+      height: 1px;
+      background: #c4c4c4;
+    }
+
+    .line span {
+      margin-left: 13px;
+      margin-right: 13px;
+    }
+
+    .oath {
+      height: 230px;
+      width: 472px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      margin-left: 24px;
+    }
+
+    .btn {
+      width: 472px;
+      height: 50px;
+      background: #ffffff;
+      border: 1px solid #767676;
+      box-sizing: border-box;
+      border-radius: 5px;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 20px;
+      color: #767676;
+      margin-bottom: 10px;
+    }
+
+    .google {
+      position: relative;
+    }
+    .google img {
+      position: absolute;
+      right: 430px;
+      bottom: 8px;
+    }
+
+    .face {
+      border: 1px solid #2d9cdb;
+      position: relative;
+    }
+
+    .face img {
+      position: absolute;
+      right: 430px;
+      bottom: 8px;
+    }
+
+    .naver {
+      border: 1px solid #00bf18;
+      position: relative;
+    }
+
+    .naver img {
+      position: absolute;
+      right: 430px;
+      bottom: 8px;
+    }
+
+    .kakao {
+      border: 1px solid #f2c94c;
+      position: relative;
+    }
+
+    .kakao img {
+      position: absolute;
+      right: 430px;
+      bottom: 8px;
+    }
   </style>
   <body>
     <main>
@@ -204,20 +344,27 @@
         <button>로그인</button>
       </form>
       <!-- 비밀번호 찾기 -->
-      <section>
+      <section class="find-count">
         <a href="#">회원가입</a>
+        <div></div>
         <a href="#">아이디/비밀번호 찾기</a>
       </section>
-      <section>
-        <div></div>
+      <section class="line">
         <span> 또는 </span>
-        <div></div>
       </section>
-      <section>
-        <button><img src="#" alt="" />구글 계정으로 로그인</button>
-        <button><img src="#" alt="" />페이스북 계정으로 로그인</button>
-        <button><img src="#" alt="" />네이버 계정으로 로그인</button>
-        <button><img src="#" alt="" />카카오톡 계정으로 로그인</button>
+      <section class="oath">
+        <button class="btn google">
+          <img src="/3_img/Google__G__Logo 1.png" alt="" />구글 계정으로 로그인
+        </button>
+        <button class="btn face">
+          <img src="/3_img/facebook.png" alt="" />페이스북 계정으로 로그인
+        </button>
+        <button class="btn naver">
+          <img src="/3_img/naver-logo.png" alt="" />네이버 계정으로 로그인
+        </button>
+        <button class="btn kakao">
+          <img src="/3_img/message-circle.png" alt="" />카카오톡 계정으로 로그인
+        </button>
       </section>
     </main>
   </body>
