--- a/과제/selectbox.html
+++ b/과제/selectbox.html
@@ -119,6 +119,7 @@
           btn.style.border = "1px solid #9b51e0";
         } else {
           list.style.display = "none";
+          btn.style.border = "1px solid #c4c4c4";
         }
       });
 
