--- a/과제/selectbox.html
+++ b/과제/selectbox.html
@@ -38,6 +38,35 @@
         justify-content: space-between;
         padding: 0px 14px 0 16px;
       }
+      .btn-select::after {
+        content: "";
+        width: 0;
+        height: 0;
+        border-top: 5px solid #c4c4c4;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+      }
+
+      .btn-select2 {
+        width: 200px;
+        height: 40px;
+        border: 1px solid #c4c4c4;
+        background: #fff;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0px 14px 0 16px;
+      }
+
+      .btn-select2::after {
+        content: "";
+        width: 0;
+        height: 0;
+        border-bottom: 5px solid #c4c4c4;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+      }
 
       .btn-select::after {
         content: "";
@@ -103,6 +132,36 @@
       const c = document.querySelector("#c");
       const d = document.querySelector("#d");
 
+      // let result = []
+
+      // function result(el) {
+      //   el.addEventListener("click", () => {
+      //     if (list.style.display === "none") {
+      //       list.style.display = "none";
+      //       btn.style.border = "1px solid #c4c4c4";
+      //     }
+      //   });
+      // }
+
+      // result.forEach((el) => {
+      //   el.addEventListener("click", () => {
+      //     if (list.style.display === "none") {
+      //       list.style.display = "none";
+      //       btn.style.border = "1px solid #c4c4c4";
+      //     }
+      //   });
+      // });
+
+      // btn.addEventListener("click", () => {
+      //   if ("btn-select") {
+      //     btn.classList.remove("btn-select");
+      //     btn.classList.add("btn-select2");
+      //   } else {
+      //     btn.classList.remove("btn-select2");
+      //     btn.classList.add("btn-select1");
+      //   }
+      // });
+
       btn.addEventListener("click", () => {
         btn.classList.toggle("on");
       });
@@ -115,9 +174,13 @@
 
       btn.addEventListener("click", () => {
         if (list.style.display === "none") {
+          btn.classList.remove("btn-select");
+          btn.classList.add("btn-select2");
           list.style.display = "block";
           btn.style.border = "1px solid #9b51e0";
         } else {
+          btn.classList.remove("btn-select2");
+          btn.classList.add("btn-select");
           list.style.display = "none";
           btn.style.border = "1px solid #c4c4c4";
         }
@@ -127,6 +190,8 @@
         if (list.style.display === "block") {
           list.style.display = "none";
           btn.style.border = "1px solid #c4c4c4";
+          btn.classList.remove("btn-select2");
+          btn.classList.add("btn-select");
         }
       });
 
@@ -134,6 +199,8 @@
         if (list.style.display === "block") {
           list.style.display = "none";
           btn.style.border = "1px solid #c4c4c4";
+          btn.classList.remove("btn-select2");
+          btn.classList.add("btn-select");
         }
       });
 
@@ -141,6 +208,8 @@
         if (list.style.display === "block") {
           list.style.display = "none";
           btn.style.border = "1px solid #c4c4c4";
+          btn.classList.remove("btn-select2");
+          btn.classList.add("btn-select");
         }
       });
 
@@ -148,6 +217,8 @@
         if (list.style.display === "block") {
           list.style.display = "none";
           btn.style.border = "1px solid #c4c4c4";
+          btn.classList.remove("btn-select2");
+          btn.classList.add("btn-select");
         }
       });
 
@@ -155,6 +226,8 @@
         if (list.style.display === "block") {
           list.style.display = "none";
           btn.style.border = "1px solid #c4c4c4";
+          btn.classList.remove("btn-select2");
+          btn.classList.add("btn-select");
         }
       });
     </script>
